libtheora 1.0beta1 (unreleased)

 - No notable changes yet.

libtheora 1.0alpha8 (2007 September 18)

 - Switch to new spec compliant decoder from theora-exp branch.
   Written by Dr. Timothy Terriberry.
 - Add support to the encoder for using quantization settings
   provided by the application.
 - more assembly optimizations

libtheora 1.0alpha7 (2006 June 20)

 - Enable mmx assembly by default
 - Avoid some relocations that caused problems on SELinux
 - Other build fixes
 - time testing mode (-f) for the dump_video example

libtheora 1.0alpha6 (2006 May 30)

 * Merge theora-mmx simd acceleration (x86_32 and x86_64)
 * Major RTP payload specification update
 * Minor format specification updates
 * Fix some spurious calls to free() instead of _ogg_free()
 * Fix invalid array indexing in PixelLineSearch()
 * Improve robustness against invalid input
 * General warning cleanup
 * The offset_y member now means what every application thought it meant
   (offset from the top). This will mean some old files (those with a 
   non-centered image created with a buggy encoder) will display differently.

libtheora 1.0alpha5 (2005 August 20)

 * Fixed bitrate management bugs that caused popping and encode
   errors
 * Fixed a crash problem with the theora_state internals not
   being intialized properly.
 * new utility function:
   - theora_granule_shift()
 * dump_video example now makes YUV4MPEG files by default, so
   the results can be fed back to encoder_example and similar
   tools. The old behavior is restored through the '-r' switch.
 * ./configure now prints a summary
 * simple unit test of the comment api under 'make check'
 * misc code cleanup, warning and leak fixes

libtheora 1.0alpha4 (2004 December 15)

 * first draft of the Theora I Format Specification
 * API documentation generated from theora.h with Doxygen
 * fix a double-update bug in the motion analysis
 * apply the loop filter before filling motion vector border 
   in the reference frame